--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "template-views",
+  "name": "@bycodexp/template-views",
   "version": "1.0.0",
-  "description": "",
+  "description": "Include & extend files...",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
